<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_about_wrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/developer"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="uallaso@gmail.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/icons_authors"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/icons_authors_content" />

    </LinearLayout>
</RelativeLayout>