<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_add_money_popup_wrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#80000000">

    <LinearLayout
        android:id="@+id/ll_add_money_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_beginning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@android:drawable/editbox_background_normal"
            android:drawableLeft="@drawable/calendar"
            android:drawableStart="@drawable/calendar"
            android:focusable="false"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@android:drawable/editbox_background_normal"
            android:drawableLeft="@drawable/wallet_filled_money"
            android:drawableStart="@drawable/wallet_filled_money"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@android:drawable/editbox_background_normal"
            android:drawableLeft="@drawable/edit"
            android:drawableStart="@drawable/edit"
            android:inputType="textCapSentences" />

        <LinearLayout
            android:id="@+id/bt_save_money"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/checked" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/add_money"
                android:textAlignment="center"
                android:textAppearance="@style/TextButton"
                android:textColor="@color/grayDarkerDark" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>