<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/intro_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">
    <RelativeLayout
        android:id="@+id/content_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/v_divisor"
        android:gravity="center"
        android:padding="8dp">
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/beach"/>

        <TextView
            android:id="@+id/tv_intro_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_1"
            android:layout_below="@+id/image"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/grayDarkerDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
            android:id="@+id/tv_intro_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_1_a"
            android:layout_below="@+id/tv_intro_1"
            android:textAlignment="center"
            android:textColor="@color/grayDarkerDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </RelativeLayout>
    <View
        android:id="@+id/v_divisor"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccentDark"
        android:layout_above="@+id/buttom_wrap" />

    <RelativeLayout
        android:id="@+id/buttom_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/bt_next"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:padding="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/grayDarkerDark"
                android:text="@string/next"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:gravity="right|center_vertical"
                android:textAppearance="@style/TextButton"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>