<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/grayLight"
    tools:context="com.example.uallas.uallet.controller.DashboardActivity"
    tools:showIn="@layout/app_bar_dashboard">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_current_travel"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="2dp"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:id="@+id/rl_no_travel_yet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mountains_bg"
            android:gravity="center"
            android:padding="48dp">

            <ImageView
                android:id="@+id/iv_no_travel_add"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:src="@drawable/airplane" />

            <TextView
                android:id="@+id/tv_no_travel_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/add_your_first_travel"
                android:layout_toRightOf="@+id/iv_no_travel_add"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_current_travel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mountains_light_bg"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/tv_current_travel_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_toLeftOf="@+id/iv_flag"
                    android:text="@string/current_travel"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

                <TextView
                    android:id="@+id/tv_current_travel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_current_travel_title"
                    android:layout_marginRight="4dp"
                    android:layout_toLeftOf="@+id/iv_flag"
                    android:text="Rio de Janeiro"
                    android:textColor="@color/cardview_dark_background"
                    android:maxLines="2"
                    android:textAppearance="@style/TitleLarge" />

                <ImageView
                    android:id="@+id/iv_flag"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/brazil" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/tv_current_travel"
                    android:weightSum="100"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_current_travel_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_budget_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/budget" />

                        <TextView
                            android:id="@+id/tv_budget"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="R$ 10.000,00"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_spending_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/spending" />

                        <TextView
                            android:id="@+id/tv_spending"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="R$ 5.000,00"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/holo_red_dark"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_current_travel_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_balance_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/balance" />

                        <TextView
                            android:id="@+id/tv_balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="R$ 5.000,00"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/cardview_dark_background"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_my_travels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_current_travel"
        android:layout_above="@+id/rl_bt_add_travel"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_my_travels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:text="@string/my_travels"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:layout_editor_absoluteX="0dp" />

            <ListView
                android:id="@+id/lv_my_travels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_my_travels">

            </ListView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/rl_bt_add_travel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/bt_add_travel"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_button"
            android:padding="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/airplane" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/grayDarkerDark"
                android:text="@string/add_new_travel"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextButton"/>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
